style.css
body {
	font-family: sans-serif;
	text-align: center;
	height: 100%;
	margin: 0;
}
h1 {
	font-family: "Reenie Beanie", sans-serif;
}
h2 {
	font-size: 4rem;
	margin: 2rem;
}
p {
	padding: 1rem;
	margin:	0;
}
p.emoji {
	font-size: 2rem;
}
h4 {
	font-weight: normal;
	font-size: .8rem;
	color: ivory;
	margin: 0;
}
a {
	color: white;
	text-decoration: none;
}
#title-block {
	position: fixed;
	overflow: hidden;
	z-index: 1;
	top: 0;
	width: 100%;
	background-color: white;
	padding-top: 1rem;
}
.canvas {
	margin-top: 5rem;
	text-align: center;
	min-width: 700px;
}
.frame {
	position: relative;
	display: inline-block;
	width: 70%;
/*	height: 100%;
*/	max-width: 700px;
}
.photo {
	width: 100%;
}
#joke-bubble.speechBbl {
	position: absolute;
	top: 8%;
	left: 85%; 
	background-color: white;
	width: 15rem;
	margin-left: -7.5rem;
	border-radius: 1rem;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}
#joke-bubble.speechBbl:after {
	content: '';
	position: absolute;
	bottom: 0;
	left: 15%;
	width: 0;
	height: 0;
	border: 20px solid transparent;
	border-top-color: white;
	border-bottom: 0;
	border-left: 0;
	margin-left: -10px;
	margin-bottom: -20px;
}
/*forgmatting for jokes over 100 characters*/
#joke-bubble.speechBbl.long {
	/*position: absolute;*/
	top: 5%;
	left: 92%; 
	/*background-color: white;*/
	/*width: 15rem;*/
/*	margin-left: -7.5rem;*/
	/*border-radius: 1rem;*/
	/*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
}
#joke-bubble.speechBbl.long:after {
	bottom: 25%;
	left: -9px;
	border: 21px solid transparent;
	border-bottom-color: white;
	border-top: 0;
	border-right: 0;
	margin-left: -10px;
	margin-bottom: -10px;
}
/****************************
*/

#reaction-bubble.speechBbl {
	position: absolute;
	top: 70%;
	left: 20%; 
	background-color: white;
	margin-left: -5rem;
/*	border: 2px solid red;
*/	width: 10rem;
	border-radius: 1rem;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}
#reaction-bubble.speechBbl:after {
	content: '';
	position: absolute;
	top: 0px;
	right: 15%;
	width: 0;
	height: 0;
	border: 20px solid transparent;
	border-bottom-color: white;
	border-top: 0;
	border-right: 0;
	margin-right: -10px;
	margin-top: -20px;
}
#fistBtn {
	display: inline-block;
	position: relative;
	background-color: white;
	top: -5rem;
	width: 6rem;
	height: 6rem;
	margin-bottom: -2rem;
	cursor: pointer;
	border-radius: 50%;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}
#fistBtn:hover, #firstBtn:active {
		box-shadow: 0 5px 9px 0 rgba(0, 0, 0, 0.2), 2px 7px 21px 2px rgba(0, 0, 0, 0.19);
}
h2#fistBtn  {
	line-height: 6.25rem;
}
footer {
	background-color: #333;
	height: 1.5rem;
	padding-top: .5rem;
}
/*mobile devices*/
@media only screen 
    and (max-device-width: 640px) {
    	h1 {
    		font-size: 6rem;
    	}
    	.frame {
    		width: 90%;
    		max-width: none;
    	}
    	.canvas {
    		margin-top: 15rem;
    		min-width: 0;
    		width: 100%;
    	}
    	#fistBtn {
    		height: 12rem;
    		width: 12rem;
    	}
    	h2 {
    		font-size: 8rem;
    	}
    	h2#fistBtn  {
			line-height: 12rem;
		}
		p {
			font-size: 2.5rem;
		}
		
		#joke-bubble.speechBbl {
			width: 17rem;
			left: 85%;
		}

		#joke-bubble.speechBbl.long {
			top: 5%;
			left: 85%;
		}
		#reaction-bubble.speechBbl {
			width: 15rem;
			left: 15%;
		}	
		p.emoji {
			font-size: 4rem;
		}
		footer {
			height: 4rem;
			margin-top: 66rem;
			padding: 1rem;
		}
		h4 {
			font-size: 2rem;
		}
}

@media only screen 
    and (max-device-width: 1000px)
    and (orientation : landscape ) {
    	.canvas {
    		margin-top: 0;
    	}
    	#title-block {
    		position: static;
    		padding-top: 0;
    		margin: 0;
    	}
    	h1 {
    		font-size: 3rem;
    		margin-bottom: 1rem;
    	}
    	p {
    		font-size: 1.5rem;
    	}
    	#joke-bubble.speechBbl {
			width: 19rem;
			left: 88%;
		}
		#joke-bubble.speechBbl.long {
			top: 5%;
			left: 88%;
			width: 19rem;
		}
		#reaction-bubble.speechBbl {
			width: 17rem;
			left: 9%;
		}	
    	#fistBtn {
    		position: fixed;
    		top: 2rem;
    		left: 5rem;
    	}
}

